# latex_symbol_list

./: .gitignore  Makefile  latex_symbols_list  project.pp1.yaml  pyproject.toml  setup.json  setup.py
.circleci/: config.yml  latex_symbol_manager_tests.tests
src/latex_deps/: lyx_deps.py  lyx_deps_all.py  tex_deps.py  tex_deps_all.py
src/latex_symbol_manager/: __init__.py  col_logging.py  collect.py  compact_all.py  create_symbols_table.py  extract.py  find_commands.py  find_equations.py  find_repeated.py  interface.py  lookahead.py  nomenc.py  parsing.py  parsing_structure.py  select_subset.py  structures.py  symbol.py
src/latex_symbol_manager/programs/: __init__.py  extract.py  nomenc.py  select_subset.py
src/latex_symbol_manager/programs/collect/: __init__.py  collect.py  find_commands.py
src/latex_symbol_manager/utils/: __init__.py
src/latex_symbol_manager_tests/: test1.py
src/lyx_sections/: __init__.py  generate_chapter_contents.py  generate_generic.py  generate_generic_templates.py  generate_part_contents.py  generic_lyx_gen.py  misc_utils.py
