[project]
name = "LatexSymbolManager-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "info@zupermind.com"}]
dependencies = [
    "PyYAML",
    "latex-gen-z7",
    "zuper-commons-z7",
    "zuper-ipce-z7",
    "zuper-typing-z7",
    "zuper-utils-where-z7",
    ]

[project.scripts]
lsm_test1 = "latex_symbol_manager.parsing:main"
lsm_test2 = "latex_symbol_manager.parsing_structure:main"
lsm_table = "latex_symbol_manager.create_symbols_table:main"
lsm_symbols = "latex_symbol_manager.compact_all:main"
lsm_extract = "latex_symbol_manager.extract:lsm_extract_main"
lsm_nomenc = "latex_symbol_manager.nomenc:main"
lsm_collect = "latex_symbol_manager.collect:main"
lsm_equations = "latex_symbol_manager.find_equations:main"

[tool]
[tool.poetry]
name = "LatexSymbolManager-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <info@zupermind.com>"]
packages = [
    {from = "src", include = "latex_symbol_manager"},
    ]

[tool.setuptools]
packages = [
    "latex_symbol_manager",
    ]
package-dir = {"" = "src"}
